src/objects/FieloPLT__ErrorLog__c.object
<CustomObject>
    <description>Information when an unexpected error occurs. It is an internal object.</description>
    <fields>
        <fullName>FieloPLT__LineNumber__c</fullName>
        <description>Line number where an error occurs.</description>
        <inlineHelpText>Line number where an error occurs.</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Message__c</fullName>
        <description>Error message.</description>
        <inlineHelpText>Error message.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__StackTrace__c</fullName>
        <description>A list of the method calls when an application exception occurs.</description>
        <inlineHelpText>A list of the method calls when an application exception occurs.</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Type__c</fullName>
        <description>Exception type that generated the error.</description>
        <inlineHelpText>Exception type that generated the error.</inlineHelpText>
        <label>Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UserId__c</fullName>
        <description>ID of the user.</description>
        <inlineHelpText>ID of the User.</inlineHelpText>
        <label>User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>FieloPLT__AllErrorLogs</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Error Logs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>